src/main/java/com/example/g2gcalculator/error/NotFoundException.java
package com.example.g2gcalculator.error;

public class NotFoundException extends RuntimeException {
    public NotFoundException(String message) {
        super(message);
    }
}